# StreamlineVPN

./: .coveragerc  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .tmp_find_line.py  .tmp_find_line2.py  .tmp_find_line3.py  .tmp_find_line4.py  .tmp_import_check.py  .validate_endpoints.py  CHANGELOG.md  CLEANUP_COMPLETED.md  COMPREHENSIVE_POLISH_SUMMARY.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  Dockerfile.production  Dockerfile.web  FINAL_CLEANUP_SUMMARY.md  FINAL_POLISH_SUMMARY.md  FINAL_VERIFICATION.md  FIXES_APPLIED.md  IMPLEMENTATION_GUIDE.md  IMPROVEMENTS_SUMMARY.md  LICENSE  Makefile  PRODUCTION_DEPLOYMENT_COMPLETED.md  PRODUCTION_DEPLOYMENT_SUMMARY.md  PRODUCTION_READINESS_ROADMAP.md  README.md  README_FIXED.md  README_OVERHAUL.md  REFACTORING_SUMMARY.md  REMAINING_FIXES_APPLIED.md  REMAINING_ISSUES_FIXED.md  SECURITY.md  __init__.py  backup.py  check_dependencies.py  (+60 more)
.git - Copy/: FETCH_HEAD  config  index  packed-refs
.github/workflows/: ci.yml  docs.yml  pages.yml  production.yml  python-app.yml  tests.yml
Legacy/: channels.txt  sources.txt
Legacy/config/: sources.unified.yaml
Legacy/docs/: CONFIGURATION.md  DEVELOPMENT_ROADMAP.md  ENHANCEMENTS.md  architecture.md  sdk-python.md
Legacy/terraform/: variables.tf
advanced_methods/: README_advanced.md  __init__.py  argo_merger.py  http_injector_merger.py  tunnel_bridge_merger.py
ansible/: inventory.yml  playbook.yml
ansible/templates/: config.yaml.j2  nginx.conf.j2
charts/streamline-vpn/: Chart.yaml  values.yaml
config/: environment.example  redis.conf  source_performance.json  sources.example.yaml  sources.extended.yaml  sources.production.yaml  sources.unified.yaml  sources.yaml
config/nginx/: nginx.conf  web-default.conf
config/prometheus/: prometheus.yml
data/: jobs.json  ml_model.joblib
deployment/: nginx.conf
deployments/cloudflare-ws-pack/: .gitignore  README.md  docker-compose.yml  env.example  setup.bat  setup.sh
docs/: 404.html  ANALYZER.md  API.md  CONFIGURATION.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT.md  IMPLEMENTATION_GUIDE.md  WEB_INTERFACE.md  _config.yml  api-base.js  architecture.md  config_generator.html  configurations.html  dashboard.html  faq.md  glossary.md  index.html  index.md  interactive.html  layout.html  login.html  logs.html  quick-start.md  sdk-python.md  statistics.html  troubleshooting.html  troubleshooting.md  upload-test.html  web-interface.md  ws-test.html
docs/_data/: nav.yml
docs/_includes/: header.html  shortcuts.html
docs/_layouts/: default.html
docs/api/: comprehensive-api-guide.md  error-codes.md  graphql.md  index.html  index.md  openapi.md  openapi.yaml  quick-reference.md  versioning.md  websocket.html
docs/architecture/: week3-architecture-refactoring.md  week4-performance-features.md
docs/assets/: site.css  site.js
docs/configuration/: advanced-configuration.md  comprehensive-config-guide.md  enhanced-configuration.md  environment-variables.md  index.html  index.md  schema-validation.md
docs/installation/: advanced-features.md  enhanced-features.md
docs/output/: formats-and-capabilities.md
docs/performance/: tuning-guide.md
docs/source-expansion/: API-REFERENCE.md  README.md
edge/: __init__.py  edge_computing.py
enterprise/: __init__.py  ldap_integration.py  multi_tenant.py
iot/: __init__.py  iot_gateway.py
jules-scratch/verification/: verify_ui_redesign.py
k8s/: deployment.yaml  hpa.yaml
kubernetes/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  postgres.yaml  redis.yaml  service.yaml  streamline-vpn-deployment.yaml
llm_finetune/: README.md
llm_finetune/configs/: model_config.yaml
llm_finetune/scripts/: train_model.py
monitoring/: alerts.yml  prometheus.yml
nginx/: nginx.conf
output_test_quick/: vpn_detailed.csv  vpn_report.json
scripts/: api_enhancer.py  apply_fixes.py  backend_fixes.py  backup.sh  cleanup_example_urls.py  cleanup_imports.py  comprehensive_validator.py  comprehensive_validator_refactored.py  coverage_gate.py  debug_syntax.py  deploy_fixes.py  deploy_fixes_refactored.py  deploy_production.py  deploy_with_monitoring.py  deployment_manager.py  enhanced_integration_demo.py  extract_sources.py  feature_enhancement.py  final_validator.py  import_path_standardizer.py  init.sql  install-reality.sh  migrate_config.py  monitor_performance.py  performance_optimizer.py  project_validator.py  remove_hardcoded_sources.py  restore.sh  run_tests.py  run_tests_no_network.py  seed_dev.py  smoke.py  smoke_check.py  smoke_test.py  standardize_env.py  standardize_imports.py  tasks.ps1  test_web_interface.py  train_ml_models.py  ws_probe.py
scripts/benchmark/: __init__.py  benchmark_runner.py  benchmark_tests.py  benchmark_utils.py
scripts/deployment/: __init__.py  content_generators.py  deployment_manager.py  deployment_steps.py  deployment_utils.py  (+1 more)
terraform/: main.tf  outputs.tf  variables.tf
test_output/: test_results_20250910_020617.json  test_summary_20250910_020617.txt
tests/: __init__.py  conftest.py  requirements.txt  test_api.py  test_api_configurations_filters.py  test_api_docs_content.py  test_cache_invalidation.py  test_caching_l1.py  test_caching_l2_l3.py  test_caching_l3_sqlite.py  test_cli_functionality.py  test_cli_module.py  test_complete_functionality.py  test_comprehensive.py  test_comprehensive_extended.py  test_comprehensive_integration.py  test_config_path.py  test_config_processor.py  test_config_processor_focused.py  test_config_validator.py  test_config_validator_basic.py  test_config_validator_deep.py  test_config_validator_focused.py  test_container_and_cache.py  test_core.py  test_core_components.py  test_cors.py  test_deduplicator.py  test_deduplicator_strategies.py  test_diagnostics_endpoints.py  test_discovery_basic.py  test_discovery_env.py  test_discovery_smoke.py  test_e2e.py  test_e2e_comprehensive.py  test_enhanced_coverage.py  test_enhanced_ml.py  test_error_and_perf.py  test_fetcher_basic.py  test_fetcher_service_unit.py  (+84 more)
vpn_automation/: README.md
vpn_merger/: __init__.py  __main__.py
(+602 files in other folders)
