[project]
name = "streamline-vpn"
version = "2.0.0"
description = "StreamlineVPN - Advanced VPN Configuration Aggregator"
requires-python = ">=3.8"

[tool.black]
line-length = 79
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 79

[tool.pytest.ini_options]
filterwarnings = [
  "ignore:Please use `import python_multipart` instead:PendingDeprecationWarning:starlette\\.formparsers",
  "ignore:coroutine 'AsyncMockMixin._execute_mock_call' was never awaited:RuntimeWarning:streamline_vpn/discovery/manager.py",
]