[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "streamline-vpn"
version = "2.0.0"
description = "StreamlineVPN - Advanced VPN Configuration Manager"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "StreamlineVPN Team", email = "team@streamlinevpn.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "aiohttp>=3.9.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.2.1",
    "click>=8.1.0",
    "pyyaml>=6.0.1",
    "redis>=5.0.0",
    "aioredis>=2.0.1",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "structlog>=23.2.0",
    "prometheus-client>=0.19.0",
    "python-multipart>=0.0.6",
    "jinja2>=3.1.0",
    "aiofiles>=23.2.0",
    "requests>=2.31.0",
    "psutil>=5.9.0",
    "orjson>=3.9.0",
    "apscheduler>=3.10.4",
    "tqdm>=4.62.3",
    "nest-asyncio>=1.5.6",
    "aiodns>=3.0.0",
    "telethon>=1.28.5"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
    "httpx>=0.25.0",
    "pytest-mock>=3.12.0",
]

[project.urls]
Homepage = "https://github.com/streamlinevpn/streamline-vpn"
Documentation = "https://docs.streamlinevpn.com"
Repository = "https://github.com/streamlinevpn/streamline-vpn.git"
"Bug Tracker" = "https://github.com/streamlinevpn/streamline-vpn/issues"

[project.scripts]
streamline-vpn = "streamline_vpn.cli:main"
streamline-vpn-api = "streamline_vpn.api.unified_api:main"
streamline-vpn-web = "streamline_vpn.web.static_server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"streamline_vpn" = ["web/static/*", "web/templates/*"]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["streamline_vpn"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["src/streamline_vpn"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/migrations/*",
]
